Generate dot files
Closes #77